Add styles to done-container (delete todo)

--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
             <input type="text">
         </section>
         <section class="todo-container">
-            <div class="todo-item">Do the shopping<i class="fas fa-trash-alt"></i></div>
-            <div class="todo-item">Feed the cat<i class="fas fa-trash-alt"></i></div>
+            <div class="todo-item"><span class="todo__dot"></span>Do the shopping<i class="todo__remove-ico far fa-trash-alt"></i></div>
+            <div class="todo-item"><span class="todo__dot"></span>Feed the cat<i class="todo__remove-ico far fa-trash-alt"></i></div>
         </section>
         <section class="done-container">
-            <div class="todo-item">Wash dishes<i class="fas fa-trash-alt"></i></div>
-            <div class="todo-item">Clean a sink<i class="fas fa-trash-alt"></i></div>
+            <div class="todo-item todo-item--checked"><span class="todo__dot todo__dot--checked"></span>Wash dishes<i
+                    class="todo__remove-ico far fa-trash-alt"></i></div>
+            <div class="todo-item todo-item--checked"><span class="todo__dot todo__dot--checked"></span>Clean a sink<i
+                    class="todo__remove-ico far fa-trash-alt"></i></div>
         </section>
     </div>
     <script src="main.js"></script>
