--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="app-wrapper">
         <main class="main-section">
             <h1>My ToDo List</h1>
-            <p>Monday 17th April</p>
+            <p></p>
             <form action="">
                 <input class="todo-input" type="text">
                 <h3 class="add-button"><i class="fas fa-plus"></i> Add a task</h3>
@@ -26,14 +26,20 @@
             <input class="add-input" type="text">
         </section> -->
         <section class="todo-container">
-            <div class="todo-item">Do the shopping<i class="todo__edit-ico fas fa-pencil-alt"></i><i class="todo__remove-ico far fa-trash-alt"></i></div>
-            <div class="todo-item">Feed the cat<i class="todo__edit-ico fas fa-pencil-alt"></i><i class="todo__remove-ico far fa-trash-alt"></i></div>
+            <div class="todo-item">
+                <div class="todo-dot"></div>Do the shopping<i class="todo__edit-ico fas fa-pencil-alt"></i><i class="todo__remove-ico far fa-trash-alt"></i>
+            </div>
+            <div class="todo-item">
+                <div class="todo-dot"></div>Feed the cat<i class="todo__edit-ico fas fa-pencil-alt"></i><i class="todo__remove-ico far fa-trash-alt"></i>
+            </div>
         </section>
         <section class="done-container">
-            <div class="todo-item todo-item--checked">Wash dishes<i class="todo__edit-ico fas fa-pencil-alt"></i><i
-                    class="todo__remove-ico far fa-trash-alt"></i></div>
-            <div class="todo-item todo-item--checked">Clean a sink<i class="todo__edit-ico fas fa-pencil-alt"></i><i
-                    class="todo__remove-ico far fa-trash-alt"></i></div>
+            <div class="todo-item todo-item--checked">
+                <div class="todo-dot"></div>Wash dishes<i class="todo__edit-ico fas fa-pencil-alt"></i><i class="todo__remove-ico far fa-trash-alt"></i>
+            </div>
+            <div class="todo-item todo-item--checked">
+                <div class="todo-dot"></div>Clean a sink<i class="todo__edit-ico fas fa-pencil-alt"></i><i class="todo__remove-ico far fa-trash-alt"></i>
+            </div>
         </section>
     </div>
     <script src="main.js"></script>
