--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
         crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    TODO: add prefixes //
 </head>
 
 <body>
@@ -22,23 +23,32 @@
                 <h3 class="add-button"><i class="fas fa-plus"></i> Add a task</h3>
             </form>
         </main>
-        <!-- <section class="input-section">
-            <input class="add-input" type="text">
-        </section> -->
-        <section class="todo-container">
-            <div class="todo-item">
-                <div class="todo-dot"></div>Do the shopping<i class="todo__edit-ico fas fa-pencil-alt"></i><i class="todo__remove-ico far fa-trash-alt"></i>
+        <section class="todo-section">
+            <div class="todo-container">
+                <div class="todo-dot"><i class="far fa-circle"></i></div>
+                <div class="todo-text">Do the shopping</div>
+                <div class="todo-icons"><i class="fas fa-pencil-alt"></i><i class="far fa-trash-alt"></i>
+                </div>
             </div>
-            <div class="todo-item">
-                <div class="todo-dot"></div>Feed the cat<i class="todo__edit-ico fas fa-pencil-alt"></i><i class="todo__remove-ico far fa-trash-alt"></i>
+            <div class="todo-container">
+                <div class="todo-dot"><i class="far fa-circle"></i></div>
+                <div class="todo-text">Do the shopping</div>
+                <div class="todo-icons"><i class="fas fa-pencil-alt"></i><i class="far fa-trash-alt"></i>
+                </div>
             </div>
         </section>
-        <section class="done-container">
-            <div class="todo-item todo-item--checked">
-                <div class="todo-dot"></div>Wash dishes<i class="todo__edit-ico fas fa-pencil-alt"></i><i class="todo__remove-ico far fa-trash-alt"></i>
+        <section class="done-section">
+            <div class="todo-container todo-container--checked">
+                <div class="todo-dot"><i class="far fa-circle"></i></div>
+                <div class="todo-text">Do the shopping</div>
+                <div class="todo-icons"><i class="fas fa-pencil-alt"></i><i class="far fa-trash-alt"></i>
+                </div>
             </div>
-            <div class="todo-item todo-item--checked">
-                <div class="todo-dot"></div>Clean a sink<i class="todo__edit-ico fas fa-pencil-alt"></i><i class="todo__remove-ico far fa-trash-alt"></i>
+            <div class="todo-container todo-container--checked">
+                <div class="todo-dot"><i class="far fa-circle"></i></div>
+                <div class="todo-text">Do the shopping</div>
+                <div class="todo-icons"><i class="fas fa-pencil-alt"></i><i class="far fa-trash-alt"></i>
+                </div>
             </div>
         </section>
     </div>
