add BEM methodology

--- a/index.html
+++ b/index.html
@@ -10,44 +10,44 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
         crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    TODO: add prefixes //
+    <!-- TODO: add prefixes -->
 </head>
 
 <body>
     <div class="app-wrapper">
-        <main class="main-section">
+        <main class="main__section">
             <h1>My ToDo List</h1>
             <p></p>
             <form action="">
-                <input class="todo-input" type="text">
-                <h3 class="add-button"><i class="fas fa-plus"></i> Add a task</h3>
+                <input class="todo__input" type="text">
+                <h3 class="add__button"><i class="fas fa-plus"></i> Add a task</h3>
             </form>
         </main>
-        <section class="todo-section">
-            <div class="todo-container">
-                <div class="todo-dot"><i class="far fa-circle"></i></div>
-                <div class="todo-text">Do the shopping</div>
-                <div class="todo-icons"><i class="fas fa-pencil-alt"></i><i class="far fa-trash-alt"></i>
+        <section class="todo__section">
+            <div class="todo__container">
+                <div class="todo__dot"><i class="far fa-circle"></i></div>
+                <div class="todo__text">Do the shopping</div>
+                <div class="todo__icons"><i class="fas fa-pencil-alt"></i><i class="far fa-trash-alt"></i>
                 </div>
             </div>
-            <div class="todo-container">
-                <div class="todo-dot"><i class="far fa-circle"></i></div>
-                <div class="todo-text">Do the shopping</div>
-                <div class="todo-icons"><i class="fas fa-pencil-alt"></i><i class="far fa-trash-alt"></i>
+            <div class="todo__container">
+                <div class="todo__dot"><i class="far fa-circle"></i></div>
+                <div class="todo__text">Do the shopping</div>
+                <div class="todo__icons"><i class="fas fa-pencil-alt"></i><i class="far fa-trash-alt"></i>
                 </div>
             </div>
         </section>
-        <section class="done-section">
-            <div class="todo-container todo-container--checked">
-                <div class="todo-dot"><i class="far fa-circle"></i></div>
-                <div class="todo-text">Do the shopping</div>
-                <div class="todo-icons"><i class="fas fa-pencil-alt"></i><i class="far fa-trash-alt"></i>
+        <section class="done__section">
+            <div class="todo__container todo__container--checked">
+                <div class="todo__dot"><i class="far fa-circle"></i></div>
+                <div class="todo__text">Do the shopping</div>
+                <div class="todo__icons"><i class="fas fa-pencil-alt"></i><i class="far fa-trash-alt"></i>
                 </div>
             </div>
-            <div class="todo-container todo-container--checked">
-                <div class="todo-dot"><i class="far fa-circle"></i></div>
-                <div class="todo-text">Do the shopping</div>
-                <div class="todo-icons"><i class="fas fa-pencil-alt"></i><i class="far fa-trash-alt"></i>
+            <div class="todo__container todo__container--checked">
+                <div class="todo__dot"><i class="far fa-circle"></i></div>
+                <div class="todo__text">Do the shopping</div>
+                <div class="todo__icons"><i class="fas fa-pencil-alt"></i><i class="far fa-trash-alt"></i>
                 </div>
             </div>
         </section>
