--- a/index.html
+++ b/index.html
@@ -14,23 +14,19 @@
 </head>
 
 <body>
-    <div class="app-wrapper">
-        <main class="main__section">
+    <main class="app-wrapper">
+        <header class="header">
             <h1>My ToDo List</h1>
             <p></p>
-            <form action="">
-                <input class="todo__input" type="text">
-                <h3 class="add__button"><i class="fas fa-plus"></i> Add a task</h3>
-            </form>
-        </main>
+        </header>
         <section class="todo__section">
-            <div class="todo__container">
+            <div class="todo">
                 <div class="todo__dot"><i class="far fa-circle"></i></div>
                 <div class="todo__text">Do the shopping</div>
                 <div class="todo__icons"><i class="fas fa-pencil-alt"></i><i class="far fa-trash-alt"></i>
                 </div>
             </div>
-            <div class="todo__container">
+            <div class="todo">
                 <div class="todo__dot"><i class="far fa-circle"></i></div>
                 <div class="todo__text">Do the shopping</div>
                 <div class="todo__icons"><i class="fas fa-pencil-alt"></i><i class="far fa-trash-alt"></i>
@@ -38,20 +34,26 @@
             </div>
         </section>
         <section class="done__section">
-            <div class="todo__container todo__container--checked">
+            <div class="todo todo--checked">
                 <div class="todo__dot"><i class="far fa-circle"></i></div>
                 <div class="todo__text">Do the shopping</div>
                 <div class="todo__icons"><i class="fas fa-pencil-alt"></i><i class="far fa-trash-alt"></i>
                 </div>
             </div>
-            <div class="todo__container todo__container--checked">
+            <div class="todo todo--checked">
                 <div class="todo__dot"><i class="far fa-circle"></i></div>
                 <div class="todo__text">Do the shopping</div>
                 <div class="todo__icons"><i class="fas fa-pencil-alt"></i><i class="far fa-trash-alt"></i>
                 </div>
             </div>
         </section>
-    </div>
+        <section class="add-todo__section">
+            <form class="add-todo">
+                <input class="add-todo__input" type="text" placeholder="Add a to-do..">
+                <button class="add-todo__button" type="submit"><i class="fas fa-plus"></i></button>
+            </form>
+        </section>
+    </main>
     <script src="main.js"></script>
 </body>
 
