Style add-todo section

--- a/index.html
+++ b/index.html
@@ -48,11 +48,8 @@
                 </div>
             </div>
         </section>
-        <section class="add-todo__section">
-            <form class="add-todo">
-                <input class="add-todo__input" type="text" placeholder="Add a to-do..">
-                <button class="add-todo__button" type="submit"><i class="fas fa-plus"></i></button>
-            </form>
+        <section class="add-todo">
+            <button class="add-todo__btn" type="submit"><i class="fas fa-plus"></i></button>
         </section>
     </main>
     <!-- <script src="main.js"></script> -->
