--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 <body>
     <main class="app-wrapper">
         <header class="header">
-            <h1>My ToDo List</h1>
-            <p></p>
+            <h1 class="header__name">My ToDo List</h1>
+            <p class="header__date">Sat 23 Feb 2019</p>
+            <p class="header__counter">4 Tasks</p>
         </header>
         <section class="todo__section">
             <div class="todo">
