--- a/index.html
+++ b/index.html
@@ -18,64 +18,20 @@
     <main class="app-wrapper">
         <header class="header">
             <h1 class="header__name">My ToDo List</h1>
-            <p class="header__date">Sat 23 Feb 2019</p>
-            <p class="header__counter">4 Tasks</p>
+            <p class="header__date"></p>
+            <p class="header__counter"></p>
         </header>
         <section class="todo__section">
-            <ul>
-                <li>
-                    <div class="todo__container">
-                        <div class="todo__btn">
-                            <button class="btn btn-default toggle-complete-btn"><i class="far fa-circle"></i></button></div>
-                        <input type="text" class="todo__txt" placeholder="Tytuł zadania..." value="">
-                        <div class="todo__btn">
-                            <button class="btn btn-danger delete-task-btn"><i class="fa fa-times"></i></button>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="todo__container">
-                        <div class="todo__btn">
-                            <button class="btn btn-default toggle-complete-btn"><i class="far fa-circle"></i></button></div>
-                        <input type="text" class="todo__txt" placeholder="Tytuł zadania..." value="">
-                        <div class="todo__btn">
-                            <button class="btn btn-danger delete-task-btn"><i class="fa fa-times"></i></button>
-                        </div>
-                    </div>
-                </li>
-            </ul>
-            <!-- <div class="todo">
-                <div class="todo__dot"><i class="far fa-circle"></i></div>
-                <div class="todo__text">Do the shopping</div>
-                <div class="todo__icons"><i class="fas fa-pencil-alt"></i><i class="far fa-trash-alt"></i>
-                </div>
-            </div>
-            <div class="todo">
-                <div class="todo__dot"><i class="far fa-circle"></i></div>
-                <div class="todo__text">Do the shopping</div>
-                <div class="todo__icons"><i class="fas fa-pencil-alt"></i><i class="far fa-trash-alt"></i>
-                </div> -->
-            </div>
+            <ul></ul>
         </section>
         <section class="done__section">
-            <!-- <div class="todo todo--checked">
-                <div class="todo__dot"><i class="far fa-circle"></i></div>
-                <div class="todo__text">Do the shopping</div>
-                <div class="todo__icons"><i class="fas fa-pencil-alt"></i><i class="far fa-trash-alt"></i>
-                </div>
-            </div>
-            <div class="todo todo--checked">
-                <div class="todo__dot"><i class="far fa-circle"></i></div>
-                <div class="todo__text">Do the shopping</div>
-                <div class="todo__icons"><i class="fas fa-pencil-alt"></i><i class="far fa-trash-alt"></i>
-                </div>
-            </div> -->
+            <ul></ul>
         </section>
         <section class="add-todo">
             <button class="add-todo__btn" type="submit"><i class="fas fa-plus"></i></button>
         </section>
     </main>
-    <!-- <script src="main.js"></script> -->
+    <script src="main.js"></script>
 </body>
 
 </html>
