--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ToDoApp</title>
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,500,600,700" rel="stylesheet">
-
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
-        crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <!-- TODO: add prefixes -->
 </head>
 
 <body>
@@ -28,7 +24,7 @@
             <ul></ul>
         </section>
         <section class="add-todo">
-            <button class="add-todo__btn" type="submit"><i class="fas fa-plus"></i></button>
+            <button class="add-todo__btn" type="submit"></button>
         </section>
     </main>
     <script src="main.js"></script>
